@@ -1,4 +1,8 @@
-﻿[dana.apps.graph]
+[dana]
+
+longName=Dana: crafting graphs
+
+[dana.apps.graph]
 
 newQuery=New query
 moveToGraph=Move to graph
