@@ -2,6 +2,7 @@
 Version: 0.2.4
   Features:
     - Automated GUI sanity-check & recovery: improved stability against #?%@!y-coded mods.
+    - New toggleable shortcut (bottom-right button) to open/close Dana. (https://raw.githubusercontent.com/vsaulue/factorio-dana/assets/v0_2/dana-shortcut.png)
   Changes:
     - Query frames can be dragged.
 
